<!--
  ~ Copyright (c) 2017 Nam Nguyen, nam@ene.im
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Toro demos</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="fb_button_like">Like</string>
  <string name="fb_button_comment">Comment</string>
  <string name="fb_button_share">Share</string>

  <string name="action_settings">Settings</string>

  <string name="title_demo_basic">Basic Use of Toro</string>
  <string name="title_timeline">Using Toro to mimic Facebook Timeline, and more</string>
  <string name="title_custom_layout">Toro demo uses custom layout wraps CardSliderLayoutManager</string>
  <string name="title_nested_list">Nested Container: a Container as child of another Container</string>
  <string name="title_complex_grid">Grid Container with custom number of active Players</string>
  <string name="title_flexible_grid">Same as Complex Grid, with item drag&amp;drop ability</string>

  <string name="title_legacy">Demo using official VideoView, considered Legacy playback API</string>

  <string name="license_bbb">
    <![CDATA[
      <h1><font color=#ffff00>Big Buck Bunny</font></h1>
      <h2>License information</h2>
      <p>The results of the Peach open movie project has been licensed under the
      <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a> license.
      This includes all the data we’ve published online and on the DVDs, and all of the contents on this website.
      If any content on this site is not licensed as such, it will be clearly indicated.</p>
      <p>In short, this means you can freely reuse and distribute this content, also commercially,
      for as long you provide a proper attribution.</p>
    ]]>
  </string>

  <string name="license_tos">
    <![CDATA[
      <h1><font color=#ffff00>Tears of Steel</font></h1>
      <h2>License information</h2>
      <p>The proceedings and results of the Mango Open Movie project are being licensed under the&nbsp;
      <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a> license.
      This includes all the data we publish on this website and which we’ll publish on the DVDs.
      If any content on this site is not licensed as such, it will be clearly indicated.</p>
      <p>In short, this means you can freely reuse and distribute this content, also commercially,
      for as long you provide a proper attribution.</p>
    ]]>
  </string>

  <string name="license_cosmos">
    <![CDATA[
      <h1><font color=#ffff00>Cosmos Laundromaty</font></h1>
      <h2>License information</h2>
      <p>The ongoing and final work of the Gooseberry Open Movie project is licensed under the&nbsp;
      <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a>&nbsp;license.
      This includes all the data we publish on this website and, ultimately, on the DVDs.
      If any content on this site is not licensed as such, it will be clearly indicated.</p>
      <p>In short, this means you can freely reuse and distribute this content, also commercially,
      as long you include proper attribution.</p>
    ]]>
  </string>

  <string name="more_demos">Open demos</string>
  <string name="lib_name">eneim/toro</string>
  <string name="lib_description">Video list auto playback made simple, specially built for RecyclerView</string>
  <string name="lib_info_version">Latest: 3.0.0, Android: 16+ (4.1+)</string>
  <string name="lib_info_license">
    <![CDATA[
      <h3>License</h3>
      <p>Copyright 2017 eneim@Eneim Labs, <a href="mailto:nam@ene.im">nam@ene.im</a></p>
      <p>Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at</p>
      <pre><code>   http://www.apache.org/licenses/LICENSE-2.0
      </code></pre>
    ]]>
  </string>
  <string name="app_info_used_lib">
    Libraries used in this App
  </string>

  <string name="transition_name_single_player">Single Player Transition</string>
  <string name="title_activity_memory_leak">Toro Demo Leak</string>
  <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards.\n\n"
  </string>
  <string name="title_activity_scrolling_article">Material Design Intro</string>
</resources>
