<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Nam Nguyen, nam@ene.im
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:gravity="center_horizontal|bottom"
    android:minHeight="192dp"
    android:orientation="vertical"
    android:padding="16dp"
    >

  <ImageView
      android:layout_width="?attr/actionBarSize"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="center"
      android:layout_margin="4dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/app_name"
      android:scaleType="fitCenter"
      android:src="@mipmap/ic_launcher_round"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/lib_name"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/lib_description"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
      />
</LinearLayout>