<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Nam Nguyen, nam@ene.im
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fb_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:theme="@style/Theme.AppCompat"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp"
    >

  <LinearLayout
      android:id="@+id/fb_item_base"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <FrameLayout
        android:id="@+id/fb_item_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="4dp"
        >
      <android.support.v7.widget.AppCompatImageView
          android:id="@+id/fb_user_icon"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center_vertical"
          android:padding="4dp"
          android:scaleType="fitCenter"
          tools:src="@mipmap/ic_launcher"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="40dp"
          android:layout_marginStart="40dp"
          android:orientation="vertical"
          android:padding="4dp"
          >
        <TextView
            android:id="@+id/fb_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            tools:text="eneim"
            />
        <TextView
            android:id="@+id/fb_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="the simple, the best"
            />
      </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fb_item_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <com.google.android.exoplayer2.ui.SimpleExoPlayerView
          android:id="@+id/fb_video_player"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:minHeight="@dimen/video_min_height"
          android:visibility="gone"
          app:resize_mode="fixed_width"
          app:surface_type="texture_view"
          app:use_controller="true"
          >
        <TextView
            android:id="@+id/player_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:background="#80000000"
            android:maxLines="1"
            android:padding="4dp"
            android:textAllCaps="true"
            android:textAppearance="@style/DebugText"
            android:textColor="#FFFF00"
            />
      </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/fb_item_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:orientation="horizontal"
        >
      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/fb_button_like"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/fb_button_like"
          style="@style/Facebook.Button.Feed"
          />
      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/fb_button_comment"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/fb_button_comment"
          style="@style/Facebook.Button.Feed"
          />
      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/fb_button_share"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/fb_button_share"
          style="@style/Facebook.Button.Feed"
          />
    </LinearLayout>
  </LinearLayout>

  <View
      android:id="@+id/over_lay"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#cc000000"
      />

</android.support.v7.widget.CardView>